third commit: поправлены свойства css в некоторых местах, добавлены 2 маленьких background прямоугольника, добавлен новый шрифт

--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
 
                 <!-- Четвертая карточка -->
 
-                <div class="seventh-section__wrapper-fourth">
+                <div class="seventh-section__wrapper-fourth seventh-section__wrapper-fourth_widthmain">
                     <p class="seventh-section__title-num">04</p>
                     <div class="seventh-section__block-img">
                         <img class="seventh-section__img4" src="./img/7-sec-img4.png" alt="изображение девушки">
