--- a/uslugi-vlozh.html
+++ b/uslugi-vlozh.html
@@ -384,7 +384,7 @@
                     </div>
 
 
-                    <div class="fifth-section__overlay"></div>
+                    <div class="fifth-section__overlay2"></div>
 
 
                 </div>
